# final_project

./: .gitignore  README.md
DNA_damage/: README.md  docker.md
DNA_damage/Clustering/: CMakeLists.txt  pyClustering.cc  readResults.py  requirements.txt  run.py  runClustering.py  runSingle.py  sugarPosTest.csv  test_runClustering.py
DNA_damage/Clustering/clustering/: pyvenv.cfg
DNA_damage/Clustering/cmake/: git_version.cpp.in  git_version.hh
DNA_damage/Clustering/include/: ClusterSBPoints_.hh  ClusteringAlgorithm.hh  SBPoint_.hh
DNA_damage/Clustering/src/: ClusterSBPoints_.cc  ClusteringAlgorithm.cc  SBPoint_.cc
DNA_damage/geometryFiles/: continuousGeometry.py  exampleInput.csv  readGeometryFiles.py  simpleMitosis.py  writeContinuousGeometry.py  writeSimpleGeometry.py
DNA_damage/photon_simulation/: CMakeLists.txt  Co60.in  photonSim.cc  vis.mac  writeInputsPhoton.py
DNA_damage/photon_simulation/include/: ActionInitialization.hh  CommandLineParser.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  G4EmAndDNA.hh  ITTrackingInteractivity.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TimeStepAction.hh
DNA_damage/photon_simulation/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  G4EmAndDNA.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
DNA_damage/simulation/: CMakeLists.txt  GNUmakefile  rbe.cc  rbe.in  rbe_PS.in  vis.mac  writeInputsAlpha.py
DNA_damage/simulation/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  G4EmAndDNA.hh  ParallelWorld.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  (+3 more)
DNA_damage/testSet/: README.md  clustering.py  plotResults.py  runAllSims.sh  runSim1.sh  runSim2.sh  runSim3.sh  sim1.in  sim1_bp.in  sim2.in  sim2_bp.in  sim3.in  sim3_bp.in
DaRT/: CMakeLists.txt  README.md  Ra224.in  dart.cc  vis.mac
DaRT/cmake/: CheckGit.cmake
DaRT/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  G4RadioactiveDecay.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  xy_SteppingAction.hh
DaRT/src/: ActionInitialization.cc  CommandLineParser.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  G4RadioactiveDecay.cc  G4RadioactiveDecayPhysics.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  xy_SteppingAction.cc
(+47 files in other folders)
